--- a/src/sass/layouts/_modal-buy-now.scss
+++ b/src/sass/layouts/_modal-buy-now.scss
@@ -338,6 +338,7 @@
 
 .modal-buy-now__input {
   height: 32px;
+  width: 100%;
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84a178;
   border-radius: 10px;
@@ -368,6 +369,7 @@
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84a178;
   border-radius: 10px;
+  width: 100%;
   padding-left: 12px;
   padding-top: 11px;
   outline: transparent;
