--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,4 +1,4 @@
-<section class="customer-review" id="customer-reviews">
+<section class="customer-reviews" id="customer-reviews">
 
   <div
     class="image-slider swiper-container swiper-initialized swiper-horizontal swiper-pointer-events swiper-backface-hidden">
