--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -46,6 +46,9 @@
 .footer {
   & .icon {
     fill: #84a178;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   &__link {
     color: #fcfcfc;
