--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -387,10 +387,14 @@
   background: rgba(248, 210, 78, 0.1);
   opacity: 1;
   visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
+  }
+  &.is-hidden .modal-products {
+    transform: translate(-50%, -50%) scale(0.9);
   }
 
   z-index: 3;
@@ -411,7 +415,7 @@
   border: 2px solid #f8d24e;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -35%);
+  transform: translate(-50%, -35%) scale(1);
   padding: 28px 20px;
   @include tablet {
     padding: 32px 40px;
@@ -420,6 +424,7 @@
   z-index: 1;
   color: #131313;
   background: #fcfcfc;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-products__button {
@@ -608,7 +613,15 @@
   border: none;
   background: #f8d24e;
   cursor: url('../images/cursor-ice.png'), auto;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover, &:focus {
+    background: #0A8817;
+    color: #FFFFFF;
+  }
 }
+
 
 .modal-products__header::before {
   content: '';
