--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -2,7 +2,6 @@
   background-color: #84a178;
   padding-top: 61px;
 
-
   @include tablet {
     padding-top: 72px;
   }
@@ -196,6 +195,15 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    background-color: #0a8817;
+  }
+  &:focus {
+    background-color: #0a8817;
+    color: #ffffff;
+  }
 }
 
 .about__btn-icon {
@@ -226,6 +234,8 @@
   background: rgba(248, 210, 78, 0.1);
   opacity: 1;
   visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 
   &.is-hidden {
     opacity: 0;
@@ -233,7 +243,9 @@
     visibility: hidden;
   }
   z-index: 15;
-  overflow-y: scroll;
+}
+.backdrop-about.is-hidden .modal-about {
+  transform: translate(-50%, -50%) scaleX(0);
 }
 .modal-about {
   position: absolute;
@@ -242,10 +254,8 @@
   align-items: center;
   flex-direction: column;
   width: 85%;
-  overflow-y: scroll;
   position: fixed;
-   transition: transform .25s cubic-bezier(.4, 0, .2, 1);
-      transition: opacity .25s cubic-bezier(.4, 0, .2, 1), visibility .25s cubic-bezier(.4, 0, .2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @include tablet {
     width: 568px;
   }
@@ -253,12 +263,12 @@
   border: 2px solid #f8d24e;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+
   padding: 28px 28px;
   @include tablet {
     padding: 32px 60px;
   }
-
+  transform: translate(-50%, -50%);
   text-align: center;
   z-index: 1;
   color: #131313;
