--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -72,7 +72,11 @@ img {
   border-radius: 10px;
   border: none;
   background: #f8d24e;
-  
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   cursor: url('../images/cursor-ice.png'), auto;
 
   &:hover {
