--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -224,6 +224,10 @@
   justify-content: center;
   align-items: center;
 
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   @media (max-width: 767px) {
     display: none;
   }
