--- a/src/sass/layouts/_modal-buy-now.scss
+++ b/src/sass/layouts/_modal-buy-now.scss
@@ -268,12 +268,12 @@
 .modal-buy-now__description--ice-cream {
   border: 2px solid #96af8c;
 
-  transition-property: color;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &::before {
-    background: linear-gradient(
+    background-color: linear-gradient(
         0deg,
         rgba(156, 190, 143, 0.7),
         rgba(156, 190, 143, 0.7)
@@ -291,12 +291,12 @@
 .modal-buy-now__description--coffee {
   border: 2px solid #efd478;
 
-  transition-property: color;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &::before {
-    background: linear-gradient(
+    background-color: linear-gradient(
         0deg,
         rgba(248, 210, 78, 0.7),
         rgba(248, 210, 78, 0.7)
@@ -314,12 +314,12 @@
 .modal-buy-now__description--milkshake {
   border: 2px solid #d6936d;
 
-  transition-property: color;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &::before {
-    background: linear-gradient(
+    background-color: linear-gradient(
         0deg,
         rgba(213, 117, 63, 0.7),
         rgba(213, 117, 63, 0.7)
